--- a/style.css
+++ b/style.css
@@ -7,3 +7,66 @@
 body {
   font-family: "Poppins", sans-serif;
 }
+
+nav {
+  min-height: 10vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.logo {
+  font-size: 1.25rem;
+  color: rgb(33, 33, 33);
+}
+
+.hero-section {
+  height: 80vh;
+  margin: 0% 10%;
+}
+
+.hero-section img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  /* border-radius: 15%; */
+}
+
+.cta {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.cta-text {
+  display: flex;
+  font-size: 2rem;
+}
+
+.cta-text h2 {
+  overflow: hidden;
+}
+
+.cta-text span {
+  padding: 0rem 0.4rem;
+  display: block;
+  text-shadow: rgba(0, 0, 0, 0.4) 0px 0px 20px;
+}
+
+.cta-btn {
+  margin: 1rem;
+  padding: 0.5rem 2rem;
+  background: rgb(234, 216, 201);
+  border-radius: 0.3rem;
+  font-family: "Poppins", sans-serif;
+  color: rgb(33, 33, 33);
+  border: none;
+  font-size: 0.7rem;
+  cursor: pointer;
+  font-weight: bold;
+}
