--- a/style.css
+++ b/style.css
@@ -16,8 +16,9 @@ nav {
 }
 
 .logo {
-  font-size: 1.25rem;
+  font-size: 1.05rem;
   color: rgb(33, 33, 33);
+  overflow: hidden;
 }
 
 .hero-section {
